# eclectic-svn

branches/kugelfang/: README
branches/kugelfang/libs/: Makefile.am  config.bash.in  core.bash.in  multilib.bash.in
branches/kugelfang/modules/: blas.eclectic
tags/release-0.9.1/man/: mailer.eclectic.5
website/: Makefile  default.css  developer-guide.shtml  index.shtml  overview.shtml  release-guide.shtml  user-guide.shtml
